--- a/TipCalculator/TipCalculator.csproj
+++ b/TipCalculator/TipCalculator.csproj
@@ -62,4 +62,19 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="CustomTipPage.xaml.cs">
+	    <DependentUpon>CustomTipPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="StandardTipPage.xaml.cs">
+	    <DependentUpon>StandardTipPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="CustomTipPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
